Revision history for Perl module XML::RSS

1.30 - June 18, 2007
       - Same as 1.29_02 (from February 23, 2007)
       - Removed some methods that were not used.
       - Added more tests to increase the test coverage.
       - Fixed a bug where prefixes could be specified with invalid characters
         because there was a range (.-_) instead of three individual
         characters (.\-_).
       - Many files were left in the distribution or Subversion repository 
         that were executable but need not be. Made them non-executable.
       - Clean up examples/ directory and move generated files out of t/
       - isPermaLink / guid fixes (RT#23983, Shlomi)
       - increased the test coverage of XML::RSS up to 100%. (Shlomif)
       - SECURITY BUG FIX: eliminated a markup injection vulnerability in the
         taxo:topics output of RSS 1.0. (Shlomif)
       - Moved the append function, which is unused and cannot be effectively 
         used, out of the main module and into the rejects directory inside
         the repository (but outside the module). (Shlomif)
       - Added POD for full POD coverage. (Shlomif)
       - Several other bug fixes. (Shlomif)
       - Heavy refactoring of the code. (Shlomif)
       - perltidy configuration file; run perltidy on XML::RSS (and 
         intentionally not on the tests) (ABH).
       - Removed the remaining tab characters. (Shlomif)
       - Fixed a bug in one of the tests. (Shlomif)
       - Converted the rendering processes of the various RSS versions to 
         one class per RSS version and applied the "Convert Conditionals
         to Polymorphism" refactoring. (Shlomif)
       - Removed the languages hash which was completely unused. (Shlomif)
       - Converted the parsing routines to be methods of XML::RSS to increase
         modularity. XML::RSS no longer inherits from XML::Parser. (Shlomif)
       - Extracted several methods from the parsing stage. (Shlomif)
       - Added a regression test to 